Trying to address issue of horizontal scrollbars being available on mobile

--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -10,6 +10,11 @@
     src: url("../fonts/RajdhaniMedium.ttf")
 }
 
+html
+{
+    overflow-x: hidden;
+}
+
 body
 {
     padding: 0;
